# Raylib-Scene-Manager

./: .gitignore  CMakeLists.txt  Makefile  README.md
cfg/: makeconf
src/: Makefile  app.c
src/Env/: env.c
src/Env/Logger/: logger.c  logger.h
src/Scene/: scene.c  scene.h
src/Scene/Lobby/: lobby.c  lobby.h
src/Scene/MainMenu/: mainmenu.c  mainmenu.h
src/Scene/Manager/: scenemanager.c  scenemanager.h
src/Scene/Manager/Transition/: transition.c  transition.h
